refactor: replace URL constructor with URI.create for better URL handling