@@ -4,6 +4,7 @@ import me.kat.iplock.IPLockPlugin;
 
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
@@ -26,7 +27,7 @@ public class DiscordWebhook {
           return;
         }
 
-        URL url = new URL(webhook);
+        URL url = URI.create(webhook).toURL();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
 
         con.setRequestMethod("POST");
